cải tiến Ui thanh search và đổi tên từ Horin thành Homi

--- a/templates/admin/owner_detail.html
+++ b/templates/admin/owner_detail.html
@@ -447,8 +447,8 @@ nav.navbar {
     <div class="admin-header-content">
         <div class="brand-section">
             <a href="{{ url_for('home') }}" class="brand-logo">
-                <img src="{{ url_for('static', filename='data/system/Logo.png') }}" alt="Horin">
-                <span>Horin</span>
+                <img src="{{ url_for('static', filename='data/system/Logo.png') }}" alt="Homi">
+                <span>Homi</span>
             </a>
             <div class="page-info">
                 <div class="vertical-divider"></div>
