--- a/templates/auth/complete_facebook_signup.html
+++ b/templates/auth/complete_facebook_signup.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Hoàn thành đăng ký - Horin{% endblock %}
+{% block title %}Hoàn thành đăng ký - Homi{% endblock %}
 
 {% block extra_css %}
 <style>
