--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}<span data-translate="login">Đăng nhập</span> - <span data-translate="homestay-booking">Horin</span>{% endblock %}
+{% block title %}<span data-translate="login">Đăng nhập</span> - <span data-translate="homestay-booking">Homi</span>{% endblock %}
 
 {% block extra_css %}
 <style>
@@ -126,7 +126,7 @@ html body .navbar.navbar-expand-lg.navbar-dark.bg-primary .auth-link.register:ho
 <div class="login-container">
   <div class="login-card">
     <div class="login-header">
-      <h3 class="login-title">Chào mừng bạn quay trở lại Horin</h3>
+                      <h3 class="login-title">Chào mừng bạn quay trở lại Homi</h3>
     </div>
     
     <div class="login-body">
