--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Đăng ký - Horin{% endblock %}
+{% block title %}Đăng ký - Homi{% endblock %}
 
 {% block extra_css %}
 <style>
@@ -109,7 +109,7 @@
 <div class="login-container">
   <div class="login-card">
     <div class="login-header">
-      <h3 class="login-title">Tạo tài khoản Horin mới</h3>
+                      <h3 class="login-title">Tạo tài khoản Homi mới</h3>
     </div>
     
     <div class="login-body">
