--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>{% block title %}<span data-translate="homestay-booking">Horin</span>{% endblock %}</title>
+    <title>{% block title %}<span data-translate="homestay-booking">Homi</span>{% endblock %}</title>
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -1496,13 +1496,13 @@
         <div class="container">
             {% if current_user.is_authenticated and current_user.is_owner() %}
                 <span class="navbar-brand fw-bold" style="color: #333333;">
-                    <img src="{{ url_for('static', filename='data/system/Logo.png') }}" alt="Horin Logo" height="40" class="me-2">
-                    <span class="brand-text" data-translate="homestay-booking" style="font-size: 24px;">Horin</span>
+                    <img src="{{ url_for('static', filename='data/system/Logo.png') }}" alt="Homi Logo" height="40" class="me-2">
+                    <span class="brand-text" data-translate="homestay-booking" style="font-size: 24px;">Homi</span>
                 </span>
             {% else %}
                 <a class="navbar-brand fw-bold" href="{{ url_for('home') }}" style="color: #333333;">
-                    <img src="{{ url_for('static', filename='data/system/Logo.png') }}" alt="Horin Logo" height="40" class="me-2">
-                    <span class="brand-text" data-translate="homestay-booking" style="font-size: 24px;">Horin</span>
+                    <img src="{{ url_for('static', filename='data/system/Logo.png') }}" alt="Homi Logo" height="40" class="me-2">
+                    <span class="brand-text" data-translate="homestay-booking" style="font-size: 24px;">Homi</span>
                 </a>
             {% endif %}
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
